# ur-ai-accelerator

./: .gitignore  Documento Ai Accelerator - Avanamanto Progetto Demo.docx  Documento Ai Accelerator - Avanamanto Progetto Demo.txt  README.md  network_info.txt  ros2_bridge_fixed.py
old/: DEPLOY_AI_ACCELERATOR.md  DEPLOY_INSTRUCTIONS.md  DIAGNOSTICA_AI_ACCELERATOR.md  DIAGNOSTICA_SISTEMA.md  Documento Ai Accelerator - Avanamanto Progetto Demo.txt  PROGRAM_STOP_ISSUE.md  TEST_ON_AI_ACCELERATOR.md  cleanup_ai_accelerator.sh  cleanup_system.ps1  deploy_to_ai_accelerator.sh  ros2_bridge.py  safe_test.py  servo_controller.py  servo_loop_controller.py  session_summary.md  start_ros2_control_complete.sh  test_all_commands.py  test_and_run.sh  test_movement_direct.py  test_on_ai_accelerator.sh  test_ros2_bridge_status.py  test_ros2_complete.sh  test_server.py  test_smooth_control.py  test_web_api.py
remote_ur_control/: IMPROVEMENTS.md  QUICK_START.md  README.md  ROS2_SETUP.md  STOP_ALL.md  check_robot_status.py  diagnostics.py  enable_robot.py  force_play.py  go_home.py  launch_ur_control.py  power_on_robot.py  quick_test.py  remote_ur_controller.py  requirements.txt  ros2_joystick_web.html  rtde_manager.py  rtde_teleop.py  start_and_test.py  start_ros2_control.sh  stop_robot.py  test_movement.py  test_script_execution.py  test_visible_movement.py  web_interface.py
ros2/yolov5_xyz/: package.xml  setup.cfg  setup.py
ros2/yolov5_xyz/config/: params.yaml
ros2/yolov5_xyz/launch/: yolov5_xyz.launch.py
ros2/yolov5_xyz/yolov5_xyz/: node.py
scripts/: setup_orbbec_camera.sh  (+1 more)
(+9 files in other folders)
