<?xml version="1.0"?>
<package format="3">
  <name>yolov5_xyz</name>
  <version>0.1.0</version>
  <description>Compute 3D positions of YOLOv5 detections using depth images.</description>
  <maintainer email="lab@example.com">Luca Furlan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
